# SAMADhi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  SAMADhi.py  SAMADhi.sql  SAMADhi_examples.py  add_MadWeightCfg.py  add_result.py  add_sample.py  das_import.py  fill_weights.py  installdeps_cmssw.sh  installpy_standalone.sh  pyproject.toml  search_SAMADhi.py  setup.cfg  setup.py  setup_standalone.sh  tox.ini  userPrompt.py
.github/workflows/: main.yml
data/: README.md  SAMADhi.sql  createUsers.sql  readme.md  v4_to_v5_upgrade.sql
database/: SAMADhi.sql  createUsers.sql  v1_to_v2_upgrade.sql  v3_to_v4_upgrade.sql
documentation/: SAMADhi_examples.py  SAMADhi_model.mwb
html/: actions.ini  conf.ini  index.php  style.css
html/conf/: ApplicationDelegate.php
html/dashboard/: installDeps.sh
html/dashboard/js/: analysisReport.js  datasetsReport.js  resultReport.js  sampleReport.js
html/dashboard/pages/: analysisReport.php  datasetsReport.php  samplesReport.php
html/tables/analysis/: actions.ini  fields.ini  relationships.ini
html/tables/dataset/: actions.ini  dataset.php  fields.ini  relationships.ini  valuelists.ini
html/tables/madweight/: fields.ini  madweight.php  valuelists.ini
html/tables/madweightrun/: fields.ini  madweightrun.php  relationships.ini  valuelists.ini
html/tables/result/: actions.ini  fields.ini  relationships.ini  valuelists.ini
html/tables/sample/: actions.ini  fields.ini  relationships.ini  valuelists.ini
html/tables/users/: fields.ini  valuelists.ini
html/templates/: Dataface_Logo.html  analysis_dashboard.html  dataset_dashboard.html  result_dashboard.html  sample_dashboard.html
python/: SAMADhi.py  SAMADhi_storm.py  das_import.py  dbAnalysis.py  luminosity.py  scripts.py  userPrompt.py  utils.py
scripts/: SAMADhi.py  SAMADhi.sql  SAMADhi_dbAnalysis.py  add_MadWeightCfg.py  add_result.py  add_sample.py  checkAndClean.py  compute_sample_luminosity.py  das_import.py  fill_weights.py  iSAMADhi  search_SAMADhi.py  update_datasets_cross_section.py  userPrompt.py  v2_to_v3_upgrade.sql  v3_to_v4_upgrade.sql
tests/: test_cli.py  test_cli_existing.py  test_models.py
tests/data/: params.json  test.db
