[metadata]
name = SAMADhi
description = SAmple MAnagement Database
long_description = file:README.md
url = 'https://github.com/cp3-llbb/SAMADhi'
author = Christophe Delaere
author_email = christophe.delaere@uclouvain.be
license = unknown
keywords = database
classifiers =
    Development Status :: 3 - Beta
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Topic :: Software Development :: Libraries :: Python Modules,

    License :: Other/Proprietary License,

    Operating System :: OS Independent,
    Programming Language :: Python :: 3,

[options]
packages =
    cp3_llbb.SAMADhi
package_dir =
    cp3_llbb.SAMADhi = python
setup_requires =
    pytest-runner
install_requires =
    peewee
    pymysql

[options.entry_points]
console_scripts =
    search_SAMADhi = cp3_llbb.SAMADhi.scripts:search
    iSAMADhi = cp3_llbb.SAMADhi.scripts:interactive
    update_datasets_cross_section = cp3_llbb.SAMADhi.scripts:update_datasets_cross_section
    add_sample = cp3_llbb.SAMADhi.scripts:add_sample
    add_result = cp3_llbb.SAMADhi.scripts:add_result
    checkAndClean = cp3_llbb.SAMADhi.scripts:checkAndClean
    das_import = cp3_llbb.SAMADhi.das_import:main
    das_import_nanoAOD = cp3_llbb.SAMADhi.das_import:import_nanoAOD_sample
    compute_sample_luminosity = cp3_llbb.SAMADhi.luminosity:compute_sample_luminosity
    SAMADhi_dbAnalysis = cp3_llbb.SAMADhi.dbAnalysis:main

[options.extras_require]
tests =
    pytest
    pytest-console-scripts

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0

[aliases]
test=pytest
