[metadata]
name = SAMADhi
description = SAmple MAnagement Database
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/cp3-llbb/SAMADhi'
author = Christophe Delaere
author_email = christophe.delaere@uclouvain.be
license = unknown
classifiers =
    Development Status :: 3 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = database

[options]
packages =
    cp3_llbb.SAMADhi
install_requires =
    peewee
    pymysql
python_requires = !=2.*, >=3.6
package_dir =
    cp3_llbb.SAMADhi = python
setup_requires =
    pytest-runner

[options.entry_points]
console_scripts =
    search_SAMADhi = cp3_llbb.SAMADhi.scripts:search
    iSAMADhi = cp3_llbb.SAMADhi.scripts:interactive
    update_datasets_cross_section = cp3_llbb.SAMADhi.scripts:update_datasets_cross_section
    add_sample = cp3_llbb.SAMADhi.scripts:add_sample
    add_result = cp3_llbb.SAMADhi.scripts:add_result
    checkAndClean = cp3_llbb.SAMADhi.scripts:checkAndClean
    das_import = cp3_llbb.SAMADhi.das_import:main
    das_import_nanoAOD = cp3_llbb.SAMADhi.das_import:import_nanoAOD_sample
    compute_sample_luminosity = cp3_llbb.SAMADhi.luminosity:compute_sample_luminosity
    SAMADhi_dbAnalysis = cp3_llbb.SAMADhi.dbAnalysis:main

[options.extras_require]
tests =
    pytest
    pytest-console-scripts

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[flake8]
max-line-length = 100
select = E,F,W,B,B950
ignore = E501,W503
